--- a/action.yml
+++ b/action.yml
@@ -15,12 +15,10 @@ runs:
   - run: 'chmod a+x $GITHUB_ACTION_PATH/install.sh && $GITHUB_ACTION_PATH/install.sh'
     shell: bash
     env:
-      KTLINT_VERSION: ${{ inputs.ktlint_version }} 
-  - run: 'ktlint --reporter=checkstyle,output=report.xml'
+      KTLINT_VERSION: ${{ inputs.ktlint_version }}
+  - run: 'ktlint --reporter=json,output=report.json --verbose || true'
     shell: bash
-  - run: |
-      ls -al
-      pwd
+  - run: 'cat report.json'
     shell: bash
 branding:
   icon: 'check'
