Run lint and create review about results

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 name: test
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [ pull_request ]
 jobs:
   build:
     runs-on: ubuntu-latest
